# jebediah

./: .gitignore  README.md  jebediah.cabal  stack.yaml
cli/dangervisit/: Main.hs
cli/jack-test/: Main.hs
cli/minmus/: Main.hs
cli/monitor/: Main.hs
cli/mün/: Main.hs
cli/spaceplane-hangar/: Main.hs
cli/vehicle-assembly-building/: Main.hs
src/: Jebediah.hs
src/Jebediah/: Alsa.hs  Counterpoint.hs  JACK.hs  Note.hs  Random.hs  Util.hs
src/Jebediah/MIDI/: Instrument.hs  Messages.hs
src/Jebediah/MIDI/Nord/: Electro4.hs  Lead2X.hs
src/Jebediah/MIDI/Novation/: BassStationII.hs
src/Jebediah/MIDI/Waldorf/: Blofeld.hs
