name:                jebediah
version:             0.1.0.0
synopsis:            Pushing the final frontier of experimental music
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           (c) 2014 Maximilian Marx
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  ghc-prof-options:    -auto-all -caf-all
  hs-source-dirs:      src
  exposed-modules:     Jebediah
                     , Jebediah.Alsa
                     , Jebediah.Counterpoint
                     , Jebediah.Note
                     , Jebediah.Util
                     , Jebediah.JACK
                     , Jebediah.MIDI.Messages
                     , Jebediah.MIDI.Instrument
                     , Jebediah.MIDI.Nord.Lead2X
                     , Jebediah.MIDI.Nord.Electro4
                     , Jebediah.MIDI.Novation.BassStationII
                     , Jebediah.MIDI.Waldorf.Blofeld
  build-depends:       base == 4.7.*
                     , midi == 0.2.*
                     , haskore == 0.2.*
                     , process == 1.2.0.*
                     , data-default == 0.5.*
                     , stm == 2.4.*
                     , transformers == 0.3.*
                     , unix == 2.7.*
                     , explicit-exception == 0.1.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jack == 0.7.1
                     , template-haskell == 2.9.*


executable spaceplane-hangar
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/spaceplane-hangar
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , haskore == 0.2.*
                     , jebediah

executable vehicle-assembly-building
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/vehicle-assembly-building
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , haskore == 0.2.*
                     , jebediah

executable dangervisit
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -O2 -rtsopts=all
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/dangervisit
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , haskore == 0.2.*
                     , jebediah

executable monitor
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all -threaded
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/monitor
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , data-default == 0.5.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jebediah


executable jack-test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all -threaded
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/jack-test
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , data-default == 0.5.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jebediah

executable minmus
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all -threaded
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/minmus
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , data-default == 0.5.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jebediah

executable mün
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all -threaded
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/mün
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , data-default == 0.5.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jebediah

executable kerbin
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
                       -fno-warn-missing-signatures
                       -fno-warn-unused-binds
                       -fno-warn-unused-imports
                       -O2 -rtsopts=all -threaded
  ghc-prof-options:    -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli/kerbin
  main-is:             Main.hs
  build-depends:       base == 4.7.*
                     , data-default == 0.5.*
                     , event-list == 0.1.*
                     , midi == 0.2.*
                     , jebediah
